color code on hovering company name

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         }
 
         .navbar a:hover {
-            background: #555; /* Darker purple color on hover */
+            background: #FF5733;/* Pink shade on hover */
         }
 
         .content {
@@ -133,7 +133,7 @@
 </head>
 <body>
 <div class="navbar">
-        <div class="navbar-logo" href="#home">N D SOFTLABS LTD</div> <!-- Logo in the left corner of the navbar -->
+        <div class="navbar-logo"> <a href="#home">N D SOFTLABS LTD</a></div> <!-- Logo in the left corner of the navbar -->
         <div class="navbar-menu">
             <a href="#home">Home</a>
             <a href="#about">About Us</a>
